--- a/client/public/index.html
+++ b/client/public/index.html
@@ -61,5 +61,12 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script type='text/javascript'>
+      (function() {
+      var s = document.createElement('script');s.type='text/javascript';s.async=true;s.id='lsInitScript';
+      s.src='https://livesupporti.com/Scripts/clientAsync.js?acc=29f421e9-cbeb-48cf-b3bf-61f8fd8317bb&skin=Air';
+      var scr=document.getElementsByTagName('script')[0];scr.parentNode.appendChild(s, scr);
+      })();
+  </script>
   </body>
 </html>
